k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rumi-restaurant-web-service
  namespace: default
  labels:
    app: rumi-restaurant-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: rumi-restaurant-web
---
apiVersion: v1
kind: Service
metadata:
  name: rumi-restaurant-web-headless
  namespace: default
  labels:
    app: rumi-restaurant-web
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: rumi-restaurant-web
